--- a/style/style.css
+++ b/style/style.css
@@ -71,6 +71,19 @@ body {
   margin: 1rem 0rem;
 }
 
+#main section {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
 #main section article img {
   width: 15rem;
   -webkit-box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
