corrección y agregado de meta kw y decrip

--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -5,7 +5,7 @@
     margin-top: 1rem;
     padding: 0.5rem;
     div{
-        @include flex (center, flex-start, wrap);
+        display: inline-block;
         li{
             text-align: left;
             h4{
