--- a/style/_buttons.scss
+++ b/style/_buttons.scss
@@ -1,3 +1,4 @@
+// BOTONES--------------------------------------------------------------------------------------------------
 main{
     button{
         border-style: none;
