--- a/style/_mediaqueries.scss
+++ b/style/_mediaqueries.scss
@@ -1,20 +1,26 @@
+// VISTA DESKTOP---------------------------------------------------------------------------------
+@media only screen and (min-width:768px){
+    .contenedor--productos{
+        @include grid (20% 80%, auto, 
+        "header header"
+        "nav nav"
+        "aside main"
+        "footer footer"
+        );
+    }
+    .contenedor--2columnas{
+        @include grid (25% 50% 25%, auto,
+        "header header header"
+        "nav nav nav"
+        ". main ."
+        "footer footer footer"
+        );
+    }
+}
+
+// VISTA MOBILE-------------------------------------------------------------------------------
 @media only screen and (max-width:768px){
     aside{
         display: none;
     }
-    @include flex (center, center, wrap);
-}
-
-@media only screen and (min-width:768px){
-    .contenedor--productos{
-        display: grid;
-        grid-template-columns: 15% 85%;
-        grid-template-rows: auto;
-        grid-template-areas: 
-        "header header"
-        "nav nav"
-        "aside main"
-        "footer footer";
-    }
-    @include flex (space-around, center, wrap);
 }
