--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,11 +1,19 @@
+// VARIABLES ----------------------------------------------------------------------
 //colores
 $verde:rgb(157, 213, 79);
 $rosa: rgb(255, 195, 206);
 $degradado: linear-gradient(to right, rgb(187, 255, 93), rgb(255, 195, 206));
 
 @mixin flex ($justify, $align, $wrap) {
-    display: inline-flex;
+    display: flex;
     justify-content: $justify;
     align-items: $align;
     flex-wrap: $wrap;
-};
+}
+
+@mixin grid ($columns, $rows, $areas) {
+    display: grid;
+    grid-template-columns: $columns;
+    grid-template-rows: $rows;
+    grid-template-areas: $areas;
+}
