--- a/style/style.css
+++ b/style/style.css
@@ -4,109 +4,91 @@
   margin: 0%;
   text-align: center;
   list-style: none;
-  color: #2ca6aa;
+  color: rgb(44, 166, 170);
 }
 
 body {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 
-#header {
+header {
   grid-area: header;
-  background: -webkit-gradient(linear, left top, right top, from(#bbff5d), to(#ffc3ce));
-  background: linear-gradient(to right, #bbff5d, #ffc3ce);
+  background: linear-gradient(to right, rgb(187, 255, 93), rgb(255, 195, 206));
 }
-
-#header .buscador {
+header div .buscador {
   border-style: none;
   width: 10rem;
 }
-
-#header .logoDesktop {
+header div .logoDesktop {
   width: 15rem;
 }
 
-#nav {
+nav {
   grid-area: nav;
-  background-image: -webkit-gradient(linear, left top, right top, from(#bbff5d), to(#ffc3ce));
-  background-image: linear-gradient(to right, #bbff5d, #ffc3ce);
+  background-image: linear-gradient(to right, rgb(187, 255, 93), rgb(255, 195, 206));
   margin-bottom: 1rem;
 }
-
-#nav .logoBuscadorMobile {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+nav div .logoBuscadorMobile {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
 }
-
-#nav a img {
+nav div a img {
   width: 5rem;
 }
-
-#nav input {
+nav div input {
   border-style: none;
   width: 10rem;
   margin: 2rem;
 }
 
-#main {
+main {
   grid-area: main;
   margin: 1rem 5rem;
 }
-
-#main h1 {
+main h1 {
   margin: 1rem 0rem;
 }
-
-#main section {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+main section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
-
-#main section article img {
+main section article img {
   width: 15rem;
-  -webkit-box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
   margin: 0.5rem;
   border-radius: 0.5rem;
+}
+main section article .tablaTalles {
+  width: 20rem;
+}
+main section article ol li {
+  list-style: decimal;
+}
+main .FAQ {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+main .FAQ p {
+  text-align: left;
 }
 
 aside {
   grid-area: aside;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
 }
-
 aside li {
   text-align: left;
   position: relative;
@@ -116,88 +98,55 @@ aside li {
 main button {
   border-style: none;
   border-radius: 0.3rem;
-  background-color: #9dd54f;
+  background-color: rgb(157, 213, 79);
   height: 2rem;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   margin-bottom: 1rem;
 }
-
 main button:hover {
-  background-color: #ffc3ce;
+  background-color: rgb(255, 195, 206);
 }
 
 #footer {
   grid-area: footer;
-  background: -webkit-gradient(linear, left top, right top, from(#bbff5d), to(#ffc3ce));
-  background: linear-gradient(to right, #bbff5d, #ffc3ce);
+  background: linear-gradient(to right, rgb(187, 255, 93), rgb(255, 195, 206));
   margin-top: 1rem;
   padding: 0.5rem;
 }
-
 #footer div {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  display: inline-block;
 }
-
 #footer div li {
   text-align: left;
 }
-
 #footer div li h4 {
   text-align: left;
   font-size: 1.2rem;
 }
-
 #footer div li a {
   text-decoration: none;
 }
 
+@media only screen and (min-width: 768px) {
+  .contenedor--productos {
+    display: grid;
+    grid-template-columns: 20% 80%;
+    grid-template-rows: auto;
+    grid-template-areas: "header header" "nav nav" "aside main" "footer footer";
+  }
+
+  .contenedor--2columnas {
+    display: grid;
+    grid-template-columns: 25% 50% 25%;
+    grid-template-rows: auto;
+    grid-template-areas: "header header header" "nav nav nav" ". main ." "footer footer footer";
+  }
+}
 @media only screen and (max-width: 768px) {
   aside {
     display: none;
   }
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
 }
 
-@media only screen and (min-width: 768px) {
-  .contenedor--productos {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 15% 85%;
-        grid-template-columns: 15% 85%;
-    -ms-grid-rows: auto;
-        grid-template-rows: auto;
-        grid-template-areas: "header header" "nav nav" "aside main" "footer footer";
-  }
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
 /*# sourceMappingURL=style.css.map */
