--- a/style/_buttons.scss
+++ b/style/_buttons.scss
@@ -3,13 +3,13 @@ main{
     button{
         border-style: none;
         border-radius: 0.3rem;
-        background-color: $verde;
+        background-color: map-get($map: $colores, $key: 'verde');
         height: 2rem;
         padding-left: 0.5rem;
         padding-right: 0.5rem;
         margin-bottom: 1rem;
     }
     button:hover{
-        background-color: $rosa;
+        background-color: map-get($map: $colores, $key: 'rosa')
     }
 }
