--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Mali&family=Quicksand&display=swap");
 * {
   padding: 0%;
   margin: 0%;
+  font-family: "Quicksand", sans-serif;
   text-align: center;
   list-style: none;
   color: rgb(44, 166, 170);
@@ -11,8 +12,13 @@ body {
   box-sizing: border-box;
 }
 
-body {
-  font-family: "Quicksand", sans-serif;
+h1 {
+  font-weight: 600;
+  background-image: linear-gradient(to right, #16d6d9, #96cc29);
+  color: rgba(0, 0, 0, 0);
+  -webkit-background-clip: text;
+  background-clip: text;
+  position: relative;
 }
 
 header {
@@ -29,7 +35,7 @@ header div .logoDesktop {
 
 nav {
   grid-area: nav;
-  background-image: linear-gradient(to right, rgb(187, 255, 93), rgb(255, 195, 206));
+  background: linear-gradient(to right, rgb(187, 255, 93), rgb(255, 195, 206));
   margin-bottom: 1rem;
 }
 nav div .logoBuscadorMobile {
