--- a/style/_tipografia.scss
+++ b/style/_tipografia.scss
@@ -6,3 +6,17 @@ h1{
     -webkit-background-clip:text; 
     background-clip:text; position:relative;
 }
+h4{
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+li{
+    a{
+        text-decoration: none;
+    }
+    a:hover{
+        background-color: map-get($map: $colores, $key: 'rosa2');
+        border-radius: 0.25rem;
+    }
+}
