--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,6 +1,7 @@
 // VARIABLES ----------------------------------------------------------------------
 $colores: (
     'rosa': rgb(255, 195, 206),
+    'rosa2':rgba(255, 195, 206, 0.5),
     'verde': rgb(157, 213, 79),
     'degradado': linear-gradient(to right, rgb(187, 255, 93), rgb(255, 195, 206)),
     'degradado2': linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%)
