3era entrega proyecto

--- a/style/_buttons.scss
+++ b/style/_buttons.scss
@@ -1,13 +1,14 @@
 // BOTONES--------------------------------------------------------------------------------------------------
 main{
-    button, .buttons{
+    button{
         border-style: none;
         border-radius: 0.3rem;
         background-color: map-get($map: $colores, $key: 'verde');
         height: 2rem;
-        padding-left: 0.5rem;
-        padding-right: 0.5rem;
+        padding: 0rem 0.5rem;
         margin-bottom: 1rem;
+        transition: 1s;
+        transition-timing-function: ease;
     }
     button:hover{
         background-color: map-get($map: $colores, $key: 'rosa')
