--- a/style/_headerNav.scss
+++ b/style/_headerNav.scss
@@ -16,22 +16,12 @@ header{
 // NAVBAR---------------------------------------------------------------------------------------------
 nav{
     grid-area: nav;
+    @include flex (center, center, wrap);
     background: map-get($map: $colores, $key: 'degradado');
-    margin-bottom: 1rem;
-    .navMobile{
-        @include flex (space-between, center, nowrap);
-    }
-    div{
-        a{
-            img{
-                width: 5rem;
-            }
-        }
-        input{
-            border-style: none;
-            width: 10rem;
-            margin: 2rem;
-        }
-    }
-    
+    margin: 1rem;
+    padding: 0.5rem 0rem;
+    border-radius: 0.5rem;
+    input{
+        border-style: none;
+    }    
 }
