--- a/style/_main.scss
+++ b/style/_main.scss
@@ -1,37 +1,45 @@
-// MAIN TODAS LAS PANTALLAS---------------------------------------------------------------------------------------------
+// MAIN---------------------------------------------------------------------------------------------
 main{
     grid-area: main;
-    margin: 1rem 5rem;
-    h1{
-        margin: 1rem 0rem;
-    }
     section{
-        @include flex (center, flex-start, wrap);
+        @include flex (space-evenly, flex-start, wrap);
         article{
-            padding: 0.5rem 0rem;
+            padding: 0.5rem;
             img{
                 width: 15rem;
-                box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
                 margin: 0.5rem;
+                box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
                 border-radius: 0.5rem;
             }
             .tablaTalles{
-                width: 20rem;
+                width: 100%;
             }
             ol{
                 li{
                     list-style: decimal;
                 }
             }
+            .botonEnviar{
+                @extend button;
+                width: 6rem;
+            }
+            .formulario{
+                div{
+                    border-style: none;
+                }
+            }
         }
     }
 }
-
+//ASIDE-------------------------------------------------------------------------------
 aside{
     grid-area: aside;
+    width: 115%;
+    background-color: map-get($map: $colores, $key: 'rosa2');
+    border-radius: 0.5rem;
     @include flex (center, flex-start, wrap);
     li{
         text-align: left;
-        position: relative; top: 5rem;
+        position: relative; top: 4rem; right: 1rem;
     }
 }
