--- a/style/_mediaqueries.scss
+++ b/style/_mediaqueries.scss
@@ -1,11 +1,19 @@
 // VISTA DESKTOP---------------------------------------------------------------------------------
 @media only screen and (min-width:768px){
+    body{
+        @include grid (10% 80% 10%, auto, 
+        "header header header"
+        ". nav ."
+        ". main ."
+        "footer footer footer"
+        );
+    }
     .contenedor--productos{
-        @include grid (20% 80%, auto, 
-        "header header"
-        "nav nav"
-        "aside main"
-        "footer footer"
+        @include grid (10% 10% 70% 10%, auto, 
+        "header header header header"
+        ". nav nav ."
+        ". aside main ."
+        "footer footer footer footer"
         );
     }
     .contenedor--contacto{
@@ -19,11 +27,48 @@
             }
         }
     }
+    .tablaTalles{
+        width: 25rem;
+    }
 }
 
 // VISTA MOBILE-------------------------------------------------------------------------------
 @media only screen and (max-width:768px){
+    .navMobile{
+        @include flex (center, center, wrap);
+        .logoMobile{
+            width: 4rem;
+        }
+        input{
+            width: 6rem;
+            height: 2rem;
+        }
+    }
     aside{
         display: none;
     }
+    .tablaTalles{
+        width: 100%;
+    }
 }
+
+
+// VISTA MINI- MOBILE-------------------------------------------------------------------------------
+@media only screen and (max-width:273px){
+    .navMobile{
+        .logoMobile{
+            width: 2rem;
+        }
+        input{
+            width: 3rem;
+            height: 2rem;
+        }
+    }
+    aside{
+        display: none;
+    }
+    .tablaTalles{
+        width: 100%;
+    }
+}
+
