--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,7 @@
 
 body {
   box-sizing: border-box;
+  background-color: rgb(236, 255, 231);
 }
 
 a {
@@ -17,16 +18,24 @@ a {
 }
 
 h1 {
+  font-size: 2.2rem;
+  font-weight: 700;
+  color: rgb(157, 213, 79);
+}
+
+h2 {
+  font-size: 1.4rem;
   font-weight: 600;
-  background-image: linear-gradient(to right, #16d6d9, #96cc29);
-  color: rgba(0, 0, 0, 0);
-  -webkit-background-clip: text;
-  background-clip: text;
-  position: relative;
+  margin: 0.2rem;
+}
+
+h3 {
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 
 h4 {
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 600;
 }
 
@@ -52,55 +61,55 @@ header div .logoDesktop {
 
 nav {
   grid-area: nav;
-  background: linear-gradient(to right, rgb(187, 255, 93), rgb(255, 195, 206));
-  margin-bottom: 1rem;
-}
-nav .navMobile {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
+  background: linear-gradient(to right, rgb(187, 255, 93), rgb(255, 195, 206));
+  margin: 1rem;
+  padding: 0.5rem 0rem;
+  border-radius: 0.5rem;
 }
-nav div a img {
-  width: 5rem;
-}
-nav div input {
+nav input {
   border-style: none;
-  width: 10rem;
-  margin: 2rem;
 }
 
 main {
   grid-area: main;
-  margin: 1rem 5rem;
-}
-main h1 {
-  margin: 1rem 0rem;
 }
 main section {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: flex-start;
   flex-wrap: wrap;
 }
 main section article {
-  padding: 0.5rem 0rem;
+  padding: 0.5rem;
 }
 main section article img {
   width: 15rem;
-  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
   margin: 0.5rem;
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem;
 }
 main section article .tablaTalles {
-  width: 20rem;
+  width: 100%;
 }
 main section article ol li {
   list-style: decimal;
 }
+main section article .botonEnviar {
+  width: 6rem;
+}
+main section article .formulario div {
+  border-style: none;
+}
 
 aside {
   grid-area: aside;
+  width: 115%;
+  background-color: rgba(255, 195, 206, 0.5);
+  border-radius: 0.5rem;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -109,19 +118,21 @@ aside {
 aside li {
   text-align: left;
   position: relative;
-  top: 5rem;
+  top: 4rem;
+  right: 1rem;
 }
 
-main button, main .buttons {
+main button, main section article .botonEnviar {
   border-style: none;
   border-radius: 0.3rem;
   background-color: rgb(157, 213, 79);
   height: 2rem;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+  padding: 0rem 0.5rem;
   margin-bottom: 1rem;
+  transition: 1s;
+  transition-timing-function: ease;
 }
-main button:hover {
+main button:hover, main section article .botonEnviar:hover {
   background-color: rgb(255, 195, 206);
 }
 
@@ -152,11 +163,18 @@ footer p {
 }
 
 @media only screen and (min-width: 768px) {
+  body {
+    display: grid;
+    grid-template-columns: 10% 80% 10%;
+    grid-template-rows: auto;
+    grid-template-areas: "header header header" ". nav ." ". main ." "footer footer footer";
+  }
+
   .contenedor--productos {
     display: grid;
-    grid-template-columns: 20% 80%;
+    grid-template-columns: 10% 10% 70% 10%;
     grid-template-rows: auto;
-    grid-template-areas: "header header" "nav nav" "aside main" "footer footer";
+    grid-template-areas: "header header header header" ". nav nav ." ". aside main ." "footer footer footer footer";
   }
 
   .contenedor--contacto article label {
@@ -166,10 +184,49 @@ footer p {
     width: 25rem;
     height: 25rem;
   }
+
+  .tablaTalles {
+    width: 25rem;
+  }
 }
 @media only screen and (max-width: 768px) {
+  .navMobile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .navMobile .logoMobile {
+    width: 4rem;
+  }
+  .navMobile input {
+    width: 6rem;
+    height: 2rem;
+  }
+
   aside {
     display: none;
+  }
+
+  .tablaTalles {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 273px) {
+  .navMobile .logoMobile {
+    width: 2rem;
+  }
+  .navMobile input {
+    width: 3rem;
+    height: 2rem;
+  }
+
+  aside {
+    display: none;
+  }
+
+  .tablaTalles {
+    width: 100%;
   }
 }
 
