--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,8 +1,10 @@
 // VARIABLES ----------------------------------------------------------------------
 $colores: (
     'rosa': rgb(255, 195, 206),
-    'rosa2':rgba(255, 195, 206, 0.5),
-    'verde': rgb(157, 213, 79),
+    'rosa2':rgba(255, 171, 187, 0.25),
+    'verde':  rgb(133, 204, 100),
+    'verde2': rgb(172, 224, 99),
+    'naranja': rgb(214, 167, 112),
     'degradado': linear-gradient(to right, rgb(187, 255, 93), rgb(255, 195, 206)),
 );
 
