--- a/style/style.css
+++ b/style/style.css
@@ -2,10 +2,10 @@
 * {
   padding: 0%;
   margin: 0%;
-  font-family: "Quicksand", sans-serif;
   text-align: center;
   list-style: none;
   color: rgb(44, 166, 170);
+  border-style: none;
 }
 
 body {
@@ -18,23 +18,30 @@ a {
 }
 
 h1 {
+  font-family: "Quicksand", sans-serif;
   font-size: 2.2rem;
+  margin: 0.5rem;
   font-weight: 700;
-  color: rgb(157, 213, 79);
+  color: rgb(133, 204, 100);
 }
 
 h2 {
-  font-size: 1.4rem;
+  font-family: "Quicksand", sans-serif;
+  font-size: 1.5rem;
   font-weight: 600;
-  margin: 0.2rem;
+  margin-top: 0.5rem;
+  color: rgb(172, 224, 99);
 }
 
 h3 {
+  font-family: "Quicksand", sans-serif;
   font-size: 1.2rem;
   font-weight: 600;
+  color: rgb(214, 167, 112);
 }
 
 h4 {
+  font-family: "Quicksand", sans-serif;
   font-size: 1rem;
   font-weight: 600;
 }
@@ -43,7 +50,7 @@ li a {
   text-decoration: none;
 }
 li a:hover {
-  background-color: rgba(255, 195, 206, 0.5);
+  background-color: rgba(255, 171, 187, 0.25);
   border-radius: 0.25rem;
 }
 
@@ -52,7 +59,6 @@ header {
   background: linear-gradient(to right, rgb(187, 255, 93), rgb(255, 195, 206));
 }
 header div .buscador {
-  border-style: none;
   width: 10rem;
 }
 header div .logoDesktop {
@@ -70,16 +76,13 @@ nav {
   padding: 0.5rem 0rem;
   border-radius: 0.5rem;
 }
-nav input {
-  border-style: none;
-}
 
 main {
   grid-area: main;
 }
 main section {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: flex-start;
   flex-wrap: wrap;
 }
@@ -92,23 +95,65 @@ main section article img {
   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem;
 }
-main section article .tablaTalles {
-  width: 100%;
-}
-main section article ol li {
-  list-style: decimal;
-}
-main section article .botonEnviar {
-  width: 6rem;
-}
-main section article .formulario div {
+main button, main form input[type=submit], main form div textarea[type=submit] {
   border-style: none;
+  border-radius: 0.3rem;
+  background-color: rgb(172, 224, 99);
+  height: 2rem;
+  padding: 0rem 0.5rem;
+  margin-bottom: 1rem;
+  transition: 1s;
+  transition-timing-function: ease;
+}
+main button:hover, main form input[type=submit]:hover, main form div textarea[type=submit]:hover {
+  background-color: rgb(255, 195, 206);
+}
+main .fila {
+  display: flex;
+}
+main .fila .columna {
+  flex: 50%;
+  margin: 1rem;
+}
+main .fila .columna p {
+  text-align: left;
+}
+main .fila .columna table {
+  margin-left: auto;
+  margin-right: auto;
+}
+main .fila .columna table th {
+  background-color: rgb(255, 195, 206);
+  padding: 0.5rem 1rem;
+}
+main .fila .columna table tr:nth-child(even) {
+  background-color: rgba(255, 171, 187, 0.25);
+}
+main .fila .columna ol li {
+  list-style: decimal;
+  text-align: left;
+}
+main form div label {
+  display: block;
+}
+main form div input, main form div textarea {
+  height: 2rem;
+  border-color: rgb(255, 195, 206);
+  border-style: solid;
+  margin: 0.5rem;
+}
+main form div textarea {
+  height: 10rem;
+  width: 20rem;
+}
+main form input[type=submit], main form div textarea[type=submit] {
+  width: 6rem;
 }
 
 aside {
   grid-area: aside;
   width: 115%;
-  background-color: rgba(255, 195, 206, 0.5);
+  background-color: rgba(255, 171, 187, 0.25);
   border-radius: 0.5rem;
   display: flex;
   justify-content: center;
@@ -122,44 +167,27 @@ aside li {
   right: 1rem;
 }
 
-main button, main section article .botonEnviar {
-  border-style: none;
-  border-radius: 0.3rem;
-  background-color: rgb(157, 213, 79);
-  height: 2rem;
-  padding: 0rem 0.5rem;
-  margin-bottom: 1rem;
-  transition: 1s;
-  transition-timing-function: ease;
-}
-main button:hover, main section article .botonEnviar:hover {
-  background-color: rgb(255, 195, 206);
-}
-
 footer {
+  grid-area: footer;
   display: flex;
   justify-content: center;
   align-items: flex-start;
   flex-wrap: wrap;
-  grid-area: footer;
   background: linear-gradient(to right, rgb(187, 255, 93), rgb(255, 195, 206));
   margin-top: 1rem;
   padding: 0.5rem;
+  position: relative;
 }
-footer div {
-  display: inline-block;
+footer div h4 {
+  text-align: center;
 }
 footer div li {
   text-align: left;
 }
-footer div li h4 {
-  text-align: left;
-}
-footer div li a {
-  text-decoration: none;
-}
 footer p {
-  display: block;
+  position: absolute;
+  bottom: 0;
+  margin: 0.2rem;
 }
 
 @media only screen and (min-width: 768px) {
@@ -177,16 +205,9 @@ footer p {
     grid-template-areas: "header header header header" ". nav nav ." ". aside main ." "footer footer footer footer";
   }
 
-  .contenedor--contacto article label {
-    display: block;
-  }
-  .contenedor--contacto article iframe {
+  .contenedor--2columnas article iframe {
     width: 25rem;
     height: 25rem;
-  }
-
-  .tablaTalles {
-    width: 25rem;
   }
 }
 @media only screen and (max-width: 768px) {
@@ -199,9 +220,17 @@ footer p {
   .navMobile .logoMobile {
     width: 4rem;
   }
-  .navMobile input {
+  .navMobile input, .navMobile main form div textarea, main form div .navMobile textarea {
     width: 6rem;
     height: 2rem;
+  }
+
+  .contenedor--contacto article label {
+    display: block;
+  }
+  .contenedor--contacto article iframe {
+    width: 25rem;
+    height: 25rem;
   }
 
   aside {
@@ -216,7 +245,7 @@ footer p {
   .navMobile .logoMobile {
     width: 2rem;
   }
-  .navMobile input {
+  .navMobile input, .navMobile main form div textarea, main form div .navMobile textarea {
     width: 3rem;
     height: 2rem;
   }
