--- a/style/style.scss
+++ b/style/style.scss
@@ -4,10 +4,10 @@
 *{
     padding: 0%;
     margin: 0%;
-    font-family: 'Quicksand', sans-serif;
     text-align: center;
     list-style: none;
     color: rgb(44, 166, 170);
+    border-style: none;
 }
 
 body{
@@ -22,6 +22,5 @@ a{
 @import "tipografia";
 @import "headerNav";
 @import "main";
-@import "buttons";
 @import "footer";
 @import "mediaqueries";
