--- a/style/_main.scss
+++ b/style/_main.scss
@@ -5,55 +5,63 @@ main{
     section{
         @include flex (center,  flex-start, wrap);
         article{
+            background-color: white;
+            box-shadow: map-get($map: $colores, $key: 'sombra');
+            border-radius: 0.5rem;
+            margin: 0.5rem;
             padding: 0.5rem;
             img{
                 width: 15rem;
-                margin: 0.5rem;
-                box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+                margin-bottom: 0.5rem;
                 border-radius: 0.5rem;
             }
         }
     }
-    // BOTONES----------------------------------------------------------------
     button{
         border-style: none;
         border-radius: 0.3rem;
         background-color: map-get($map: $colores, $key: 'verde2');
         height: 2rem;
         padding: 0rem 0.5rem;
-        margin-bottom: 1rem;
         transition: 1s;
         transition-timing-function: ease;
     }
     button:hover{
         background-color: map-get($map: $colores, $key: 'rosa')
     }
-    // PANTALLA CON 2 COLUMNAS ------------------------------------------------------------
-    .fila{
-        display: flex;
-        .columna{
-            flex: 50%;
-            margin: 1rem;
-            p{
+    // 2 COLUMNAS --------------------------------------------------------------------
+    .cajaSuperior{
+        background-color: white;
+        border-radius: 0.2rem;
+        h4{
+            color: map-get($map: $colores, $key: 'naranja');
+        }
+
+    }
+    .columna{
+        background-color: white;
+        border-radius: 0.2rem;
+        padding: 1rem;
+        margin-bottom: 1rem;
+        table{
+            margin-left: auto;
+            margin-right: auto;
+            th{
+                background-color: map-get($map: $colores, $key: 'rosa2');
+            }
+            tr:nth-child(even) {
+                background-color: map-get($map: $colores, $key: 'rosa');
+            }
+        }
+        ol{
+            li{
+                list-style: decimal;
                 text-align: left;
             }
-            table{
-                margin-left: auto;
-                margin-right: auto;
-                th{
-                    background-color: map-get($map: $colores, $key: 'rosa');
-                    padding: 0.5rem 1rem;
-                }
-                tr:nth-child(even) {
-                    background-color: map-get($map: $colores, $key: 'rosa2');
-                }
-            }
-            ol{
-                li{
-                    list-style: decimal;
-                    text-align: left;
-                }
-            }
+        }
+        iframe{
+            height: 75%;
+            width: auto;
         }
     }
     // FORMULARIOS --------------------------------------------------------------------------
@@ -82,11 +90,15 @@ main{
     
 }
 
+main a:link{
+    text-decoration: underline;
+}
+
 //ASIDE-------------------------------------------------------------------------------
 aside{
     grid-area: aside;
     width: 115%;
-    background-color: map-get($map: $colores, $key: 'rosa2');
+    background-color: rgba(236, 145, 162, 0.514);
     border-radius: 0.5rem;
     @include flex (center, flex-start, wrap);
     li{
