--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,10 +1,11 @@
 // VARIABLES ----------------------------------------------------------------------
 $colores: (
-    'rosa': rgb(255, 195, 206),
-    'rosa2':rgba(255, 171, 187, 0.25),
-    'verde':  rgb(133, 204, 100),
-    'verde2': rgb(172, 224, 99),
-    'naranja': rgb(214, 167, 112),
+    'rosa': rgb(240, 205, 205),
+    'rosa2':rgb(231, 172, 182),
+    'verde':  rgb(96, 172, 62),
+    'verde2': rgb(147, 199, 75),
+    'naranja': rgb(236, 171, 96),
+    'sombra': 0px 5px 5px rgba(0,0,0,0.1),
     'degradado': linear-gradient(to right, rgb(187, 255, 93), rgb(255, 195, 206)),
 );
 
